--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon src/index"
+    "start": "node src/index"
   },
   "keywords": [],
   "author": "",
